--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
                 <artifactId>log4j-core</artifactId>
                 <version>2.12.1</version>
             </dependency>
-</dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
